--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 =Paperclip
 
+*Note* this is fork of [pk/sequel_paperclip] which I tried to fix a couple of issues to be able to use it. It tries to keep the Api pretty much the same as ActiveRecord Paperclip.
+
 Paperclip is intended as an easy file attachment library for ActiveRecord. The intent behind it was to keep setup as easy as possible and to treat files as much like other attributes as possible. This means they aren't saved to their final locations on disk, nor are they deleted if set to nil, until ActiveRecord::Base#save is called. It manages validations based on size and presence, if required. It can transform its assigned image into thumbnails if needed, and the prerequisites are as simple as installing ImageMagick (which, for most modern Unix-based systems, is as easy as installing the right packages). Attached files are saved to the filesystem and referenced in the browser by an easily understandable specification, which has sensible and useful defaults.
 
 See the documentation for the +has_attached_file+ method for options.
@@ -8,13 +10,24 @@ See the documentation for the +has_attached_file+ method for options.
 
 In your model:
 
-  class User < ActiveRecord::Base
+  class User < Sequel::Model
     has_attached_file :avatar, :styles => { :medium => "300x300>", :thumb => "100x100>" }
+    
+    # note class level validation declaration. This is different from Sequel validations which are object level
+    validates_attachment_content_type :avatar, "image/jpg"
+    
+    def validate
+      validates_presence :name
+      # blah, blah
+      unless avatar.valid?
+        errors.add(:avatar, avatar.errors.join("\n")
+      end
+    end
   end
 
 In your migrations:
 
-  class AddAvatarColumnsToUser < ActiveRecord::Migration
+  class AddAvatarColumnsToUser < Sequel::Migration
     def self.up
       add_column :users, :avatar_file_name,    :string
       add_column :users, :avatar_content_type, :string
