--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 =Paperclip
 
-*Note* this is fork of [pk/sequel_paperclip] which I tried to fix a couple of issues to be able to use it. It tries to keep the Api pretty much the same as ActiveRecord Paperclip.
+*Note* this is a fork of https://github.com/pk/sequel_paperclip which I tried to use it in a project and had to fix some of it's issues. It tries to keep the Api pretty much the same as ActiveRecord Paperclip.
 
 Paperclip is intended as an easy file attachment library for ActiveRecord. The intent behind it was to keep setup as easy as possible and to treat files as much like other attributes as possible. This means they aren't saved to their final locations on disk, nor are they deleted if set to nil, until ActiveRecord::Base#save is called. It manages validations based on size and presence, if required. It can transform its assigned image into thumbnails if needed, and the prerequisites are as simple as installing ImageMagick (which, for most modern Unix-based systems, is as easy as installing the right packages). Attached files are saved to the filesystem and referenced in the browser by an easily understandable specification, which has sensible and useful defaults.
 
@@ -61,6 +61,21 @@ In your show view:
   <%= image_tag @user.avatar.url(:medium) %>
   <%= image_tag @user.avatar.url(:thumb) %>
 
+==Extending Interpolations
+Simply add your own interplators like:
+
+  #config/initializers/interplations.rb
+  module Paperclip
+    module Interpolations
+      def my_value(attachment, style)
+        attachment.property + '001'
+      end
+    end
+  end
+  
+  # now you can have :my_value a your path parameter
+  
+  
 ==Contributing
 
 If you'd like to contribute a feature or bugfix, thanks! To make sure your fix/feature
